--- a/index.html
+++ b/index.html
@@ -116,10 +116,73 @@
             <p>
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate iure iste voluptas? Doloremque nihil illo, quia, culpa aliquam eos quasi ratione, ipsam eligendi cum officiis voluptatibus sit. Vero, quo et!
             </p>
+
+            <a href="#" class="btn-1">informacion</a>
+
+        </div>
+        <div class="about-img"> 
+            <img src=".images/about.png" alt="">
         </div>
     </div>
         
     </section>
+
+    <section class="contact container" >
+        <h2>Contacto</h2>
+        <form>
+
+            <input type="email" placeholder="Correo">
+            <a href="#" class="btn-1">Informacion</a>
+
+        </form>
+        
+    </section>
+
+    <footer class="footer">
+
+        <div class="footer-content container">
+
+            <div class="link">
+                <ul>
+                    <li><a href="#">Lorem</a></li>
+                    <li><a href="#">Lorem</a></li>
+                    <li><a href="#">Lorem</a></li>
+                    <li><a href="#">Lorem</a></li>
+                </ul>
+            </div>
+
+            <div class="link">
+                <ul>
+                    <li><a href="#">Lorem</a></li>
+                    <li><a href="#">Lorem</a></li>
+                    <li><a href="#">Lorem</a></li>
+                    <li><a href="#">Lorem</a></li>
+                </ul>
+            </div>
+
+            <div class="link">
+                <ul>
+                    <li><a href="#">Lorem</a></li>
+                    <li><a href="#">Lorem</a></li>
+                    <li><a href="#">Lorem</a></li>
+                    <li><a href="#">Lorem</a></li>
+                </ul>
+            </div>
+
+            <div class="link">
+                <ul>
+                    <li><a href="#">Lorem</a></li>
+                    <li><a href="#">Lorem</a></li>
+                    <li><a href="#">Lorem</a></li>
+                    <li><a href="#">Lorem</a></li>
+                </ul>
+            </div>
+
+
+        </div>
+
+    </footer>
+
 
 </body>
 </html>
