--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
     <main class="services container">
         <h2>Nuestros Servicios</h2>
 
+       <div class="services-content">
+
         <div class="services-1">
             <img src="./images/i1.svg" alt="">  
             <h3>Servio lorem</h3>  
@@ -92,6 +94,9 @@
             <img src="./images/i5.svg" alt="">  
             <h3>Servio lorem</h3>  
         </div>
+
+       </div>
+
     </main>
 
     <section class="Informacion container">
@@ -132,7 +137,7 @@
         <form>
 
             <input type="email" placeholder="Correo">
-            <a href="#" class="btn-1">Informacion</a>
+            <a href="#" class="btn-1">enviar</a>
 
         </form>
         
